<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">eyedroid</string>
    <string name="menu_settings">Preferences</string>
    <string name="capture">Capture</string>
    <string name="face">No face found</string>
    <string name="service">service</string>

    <color name="blue">#0000FF</color>
    <color name="white">#FFFFFF</color>
    <color name="black">#000000</color>
    <color name="grey_main">#EDEDED</color>
    <color name="nav_grey">#333333</color>
    <color name="app_color">#754C78</color>
    
    <string name="title_activity_main">Menu</string>
    <string name="title_activity_review">Review</string>
    <string name="preview">eydroid   &#62;</string>
    <string name="review">Log           &#62;</string>
    <string name="description"></string>
    <string name="log"></string>
    <string name="title_activity_settings">Settings</string>
    <string name="email">Email (GMAIL)</string>
    <string name="password">Password (GMAIL)</string>
    <string name="phone">Phone Number</string>
    <string name="email_check">Notify by Email</string>
    <string name="phone_check">Notify by SMS</string>
    <string name="title_activity_splash">eydroid</string>
    <string name="intro">Monitoring \n System</string>
    <string name="version">Plaix Corp \n v1.0</string>
    <string name="icon_description">icon</string>
    <string name="menu">Menu</string>
    <string name="preview_icon_text">Capture</string>
    <string name="review_icon_text">Review</string>
    <string name="settings">Preferences</string>
    <string name="delay">Set delay (Sec)</string>
    <string name="viewer">Viewer</string>
    <string name="moduules_activity">Modules</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="home_activity">Activity Feed</string>


</resources>