<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_main"
    tools:context=".SettingsActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:isScrollContainer="true"
        android:padding="10dp"
        android:background="@color/grey_main">


        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="21dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:textSize="30dp"
            android:background="@color/white"
            android:ems="10"
            android:padding="8dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#000000"
            android:layout_below="@id/editText1"/>

        <EditText
            android:id="@+id/editText2"
            android:textSize="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText1"
            android:layout_below="@+id/editText1"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:padding="8dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#000000"
            android:layout_below="@id/editText2"/>

        <EditText
            android:id="@+id/editText4"
            android:textSize="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText2"
            android:layout_below="@+id/editText2"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:padding="8dp"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="phone" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#000000"
            android:layout_below="@id/editText4"/>

        <CheckBox
            android:id="@+id/checkBox1"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText4"
            android:layout_below="@+id/editText4"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/email_check"

            android:padding="8dp"
            android:textColor="@color/black" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/checkBox1"
            android:layout_below="@+id/checkBox1"
            android:layout_marginBottom="10dp"
            android:text="@string/phone_check"
            android:padding="8dp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:textSize="30dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText4"
            android:layout_below="@id/checkBox2"
            android:ems="6"
            android:layout_marginTop="10dp"
            android:padding="8dp"
            android:hint="@string/delay"
            android:inputType="number"
            android:maxLength="3" 
            android:background="@color/white" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#000000"
            android:layout_below="@id/checkBox2"/>

    </RelativeLayout>

</ScrollView>